# traefik-practice

./: .gitignore  README.md  docker-compose.yaml  rules.yml
auth/: main.py  pyproject.toml
web/: main.py  pyproject.toml
web/auth/: main.py  pyproject.toml
web/auth/model/: conn.py  schema.py  table.py
web/auth/router/: v0.py
web/auth/service/: auth_service.py  utils.py
web/other/: main.py  pyproject.toml
